--- a/index.html
+++ b/index.html
@@ -5,53 +5,72 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="custom.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./styles/stylesheet.css">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
     </head>
 
-    <body>
-        <div id="wrapper" class="App">
-            <div class="box">
-                <div class="mr">
-                    <div class="slider">
-                        <label for="customRange3" class="form-label">Example range</label>
-<input type="range" class="form-range" min="0" max="1" step="0.1" id="customRange3">
-                    </div>
-                    <div id="clips"></div>
+    <body class="col-12">
+        <div id="wrapper" class="container-fluid justify-content-center">
+            <div class="d-flex card col-8 mx-auto mt-5" id="clips">
+                <h1 class="card-header display-5">
+                    Drum Pad
+                </h1>
+                <div class="card-body">
+                    <btn class="col-8 btn btn-lg my-3 disabled placeholder placeholder-glow bg-light">
+                        <span class="text-dark"></span>
+                    </btn>
+                    <label for="volume" class="form-control border-0">
+                    <div class="lead">Volume</div>
+                    <input type="range" class="form-range" min="0" max="1" step="0.1" id="volume" value=".5" onchange="{onChange()}">
+                </label>
                 </div>
             </div>
-            <div class="box btn-box">
-                <div class="mr">
-                    <button id="sticks" class="btn-papaya sticks" type="button" value="q" onclick="{handleClick}">Q</button>
-                    <button id="crash" class="crash" type="button" value="w" onclick="{handleClick}" variant="danger">W</button>
-                    <button id="crash2" class="crash" type="button" value="e" onclick="{handleClick}" variant="success">E</button>
-                </div>
 
-                <div class="mr">
-                    <button id="hihatopen" class="hihat" value="a" onclick="{handleClick}" type="button" variant="info">A</button>
-                    <button id="hihatclosed" class="hihat" value="s" onclick="{handleClick}" type="button">S</button>
-                    <button id="ride" class="ride" value="d" type="button" onclick="{handleClick}" variant="warning">D</button>
-                </div>
-
-                <div class="mr">
-                    <button id="snare" class="snare" value="z" type="button" onclick="{handleClick}" variant="warning">Z</button>
-                    <button id="kick" class="kick" value="x" type="button" onclick="{handleClick}" variant="danger">X</button>
-                    <button id="tom" class="tom" value="c" type="button" onclick="{handleClick}" variant="info">C</button>
-                    <button id="tom2" class="tom" value="v" type="button" onclick="{handleClick}" variant="info">C</button>
-                </div>
-            </div>
-            <audio id="q" volume="{setVolume}" src="./src/sound/sticks.mp3"></audio>
-            <audio id="w" volume="{setVolume}" src="./src/sound/crash.mp3"></audio>
-            <audio id="e" volume="{setVolume}" src="./src/sound/crash2.mp3"></audio>
-            <audio id="a" volume="{setVolume}" src="./src/sound/hihatopen.mp3"></audio>
-            <audio id="s" volume="{setVolume}" src="./src/sound/hihatclosed.mp3"></audio>
-            <audio id="d" volume="{setVolume}" src="./src/sound/ride.mp3"></audio>
-            <audio id="z" volume="{setVolume}" src="./src/sound/snare.mp3"></audio>
-            <audio id="x" volume="{setVolume}" src="./src/sound/kick.mp3"></audio>
-            <audio id="c" volume="{setVolume}" src="./src/sound/tom.mp3"></audio>
-
-            <script src="keydown.js"></script>
         </div>
+        <div class="container">
+            <div class="container pt-3">
+                <div class="d-flex col-12 justify-content-evenly p-1">
+                    <button id="sticks" class="btn btn-melon btn-lg sticks col-3" type="button" value="q"
+                        onclick="{handleClick}">Q</button>
+                    <button id="crash" class="crash btn btn-lg btn-papaya col-3" type="button" value="w"
+                        onclick="{handleClick}" variant="danger">W</button>
+                    <button id="crash2" class="crash btn btn-lg btn-papaya  col-3" type="button" value="e"
+                        onclick="{handleClick}" variant="success">E</button>
+                </div>
+                <div class="d-flex col-12 justify-content-evenly p-1">
+                    <button id="hihatopen" class="hihat btn btn-lg btn-berry col-3" value="a" onclick="{handleClick}"
+                        type="button" variant="info">A</button>
+                    <button id="hihatclosed" class="hihat btn  btn-lg btn-berry col-3" value="s" onclick="{handleClick}"
+                        type="button">S</button>
+                    <button id="ride" class="ride btn btn-lemon btn-lg col-3" value="d" type="button"
+                        onclick="{handleClick}" variant="warning">D</button>
+                </div>
+                <div class="d-flex col-12 justify-content-evenly p-1">
+                    <button id="snare" class="snare btn btn-lemon btn-lg col-3" value="z" type="button"
+                        onclick="{handleClick}" variant="warning">Z</button>
+                    <button id="kick" class="wkick btn btn-melon btn-lg col-3" value="x" type="button"
+                        onclick="{handleClick}" variant="danger">X</button>
+                    <button id="tom" class="tom btn btn-grape  btn-lg col-3" value="c" type="button"
+                        onclick="{handleClick}" variant="info">C</button>
+                </div>
+            </div>
+            <div class="d-flex row">
+                <audio id="q" volume="{setVolume}" src="./src/sound/sticks.mp3"></audio>
+                <audio id="w" volume="{setVolume}" src="./src/sound/crash.mp3"></audio>
+                <audio id="e" volume="{setVolume}" src="./src/sound/crash2.mp3"></audio>
+                <audio id="a" volume="{setVolume}" src="./src/sound/hihatopen.mp3"></audio>
+                <audio id="s" volume="{setVolume}" src="./src/sound/hihatclosed.mp3"></audio>
+                <audio id="d" volume="{setVolume}" src="./src/sound/ride.mp3"></audio>
+                <audio id="z" volume="{setVolume}" src="./src/sound/snare.mp3"></audio>
+                <audio id="x" volume="{setVolume}" src="./src/sound/kick.mp3"></audio>
+                <audio id="c" volume="{setVolume}" src="./src/sound/tom.mp3"></audio>
+            </div>
+        </div>
+        <script src="./script.js"></script>
+
+        <script src="./keydown.js"></script>
     </body>
 
 
