--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
             </div>
             <div class="d-flex row">
                 <audio crossorigin="anonymous" volume="{setVolume()}">
-                <source id="q" type="source/mp3" volume="{setVolume}"  src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/crash.mp3">
-                <source id="w" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/crash.mp3">
-                <source id="e" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/crash2.mp3">
-                <source id="a" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/hihatopen.mp3">
-                <source id="s" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/hihatclosed.mp3">
-                <source id="d" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/ride.mp3">
-                <source id="z" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/snare.mp3">
-                <source id="x" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/kick.mp3">
-                <source id="c" type="source/mp3" volume="{setVolume}" src="https://github.com/aspringer207/drum/blob/06f5fc92b9897473f794e50a2022fd56a085978f/src/tom.mp3">
+                <source id="q" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/g4jnmkc742dcknupos3c2/sticks.mp3?rlkey=xkcop8ic8lkwzq4yzbqymk3on&dl=0">
+                <source id="w" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/ai1fi5mlmskjl7ka5gca0/crash.mp3?rlkey=fl0nf7t2l39en9fdyskqy3uy7&dl=0">
+                <source id="e" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/7t2g74ubocm40xakqifoh/crash2.mp3?rlkey=t2o8n31x2xj2t9epcis6r7z4v&dl=0">
+                <source id="a" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/3uuxqp8l2kwk9z5pwrnzm/hihatopen.mp3?rlkey=vza3vfnzx585altx44eywtzqb&dl=0">
+                <source id="s" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/jja1512jzqokmlf9ktot3/hihatclosed.mp3?rlkey=ov7f2i1f9pzkttreip7si14ld&dl=0">
+                <source id="d" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/gwn02dt2xfmsjjjpw8h32/ride.mp3?rlkey=klviuugnwtj0diqgy4b8q9fpm&dl=0">
+                <source id="z" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/zprq08gtbjo3jyr7qdcti/snare.mp3?rlkey=io0xm92mkm9mcn08n10fhf1he&dl=0">
+                <source id="x" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/sokwhksp5tttl2zqbaa6z/kick.mp3?rlkey=s75hlnu5nladtcbflgeej0pc9&dl=0">
+                <source id="c" type="source/mp3" volume="{setVolume}" src="https://dl.dropbox.com/scl/fi/mmjabwy7ciiurc1hs6zpb/tom.mp3?rlkey=xke3bv05u44fgw581kl5f6y4o&dl=0">
             </audio>
             </div>
         </div>
